@startuml

package model {
    class User {
        - id : int
        - name : String
        - email : String
        - password : String
	- isDeleted : boolean
        + getId() : int
	+ setId(id: int) : void
        + getName() : String
	+ setName(name: String) : void
        + getEmail() : String
	+ setEmail(email: String) : void
        + getPassword() : String
	+ setPassword(password : String) : void
    }

    class Account {
        - id : int
        - userId : int
        - balance : double
        - createdAt : LocalDateTime
	- isDeleted : boolean
        + getId() : int
        + getUserId() : int
        + getBalance() : double
        + getCreatedAt() : LocalDateTime
    }

    class Transaction {
        - id : int
        - fromAccount : int
        - toAccount : int
        - amount : double
        - type : String
        - timestamp : LocalDateTime
        + getId() : int
        + getFromAccount() : int
        + getToAccount() : int
        + getAmount() : double
        + getType() : String
        + getTimestamp() : LocalDateTime
    }
}

package repository {
    class UserRepository {
        + create(user: User) : void
        + findByEmail(email: String) : User
        + findById(userId: int) : User
	+ findAll() : List<User>
	+ update(userId: int) : void
	+ safeDelete(userId: int) : void
	+ hardDelete(userId: int) : void
    }

    class AccountRepository {
        + create(account: Account) : void
        + findByAccountId(id: int) : Account
	+ findByUserId(userId: int) : Account
        + updateBalance(id: int, balance: double) : void
	+ findAll() : List<Account>
	+ safeDelete(accountId : int) : void
	+ hardDelete(accountId : int) : void
    }

    class TransactionRepository {
        + create(transaction: Transaction) : void
        + findByAccountId(accountId: int) : List<Transaction>
    }
}

package service {
    class AuthService {
        + register(name: String, email: String, password: String) : User
        + login(email: String, password: String) : User
    }

    class AccountService {
        + createAccount(userId: int, initialBalance: double) : void
        + deposit(accountId: int, amount: double) : void
        + withdraw(accountId: int, amount: double) : void
        + transfer(fromAccount: int, toAccount: int, amount: double) : void
    }

    class TransactionService {
        + logTransaction(fromAccount: int, toAccount: int, amount: int, type: String) : void
        + getTransactions(accountId: int) : List<Transaction>
    }
}

package controller {
    class BankController {
        + register(name: String, email: String, password: String) : User
        + login(email: String, password: String) : User
        + createAccount(userId: int, initialBalance: BigDecimal) : void
        + deposit(accountId: int, amount: double) : void
        + withdraw(accountId: int, amount: double) : void
        + transfer(fromAccount: int, toAccount: int, amount: double) : void
        + getTransactions(accountId: int) : List<Transaction>
    }
}

User "1" -- "0.*" Account : owns
Account "1" -- "0.*" Transaction : contains

BankController --> AuthService
BankController --> AccountService
BankController --> TransactionService

AuthService --> UserRepository
AccountService --> AccountRepository
AccountService --> TransactionRepository
TransactionService --> TransactionRepository

@enduml